DOCS Correct typo in changelog template (and remove "CMS")

--- a/.changelog.md.twig
+++ b/.changelog.md.twig
@@ -6,7 +6,7 @@ This release includes CMS and Framework version X.X.X.
 
 - [Framework X.X.X](#)
 
-Upgrading to Recipe {{ version }} is recommended for all CWP sites. This upgrade can be carried out by any development team familiar with SiliverStripe CMS. However, if you would like SilverStripe's assistance, you can request support via the [Service Desk](https://www.cwp.govt.nz/service-desk/new-request/).
+Upgrading to Recipe {{ version }} is recommended for all CWP sites. This upgrade can be carried out by any development team familiar with SilverStripe. However, if you would like SilverStripe's assistance, you can request support via the [Service Desk](https://www.cwp.govt.nz/service-desk/new-request/).
 
 ## New features
 
